fix: Further clean up for dark mode toggle

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,12 +33,6 @@
         font-size: 0.85rem;
         @apply filter blur-xxs;
 
-        &:not() {
-          text-shadow: none;
-          font-size: inherit;
-          @apply opacity-60;
-        }
-
         &.line-focus {
           @apply blur-none;
         }
